export const snapshot = {};

snapshot[`Build a markdown site 1`] = `7`;

snapshot[`Build a markdown site 2`] = `
{
  formats: [
    {
      engine: true,
      key: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
      removeExtension: true,
    },
    {
      engine: true,
      key: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
      removeExtension: true,
    },
    {
      engine: false,
      key: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
      removeExtension: true,
    },
    {
      dataLoader: [AsyncFunction: json],
      engine: false,
      key: ".json",
    },
    {
      engine: true,
      key: ".md",
      pageLoader: [AsyncFunction: text],
      removeExtension: true,
    },
    {
      component: true,
      dataLoader: [AsyncFunction: module],
      engine: true,
      key: ".js",
      pageLoader: [AsyncFunction: module],
    },
    {
      component: true,
      dataLoader: [AsyncFunction: module],
      engine: true,
      key: ".ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      component: true,
      engine: true,
      includesPath: "_includes",
      key: ".njk",
      pageLoader: [AsyncFunction: text],
      removeExtension: true,
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      key: ".yaml",
      pageLoader: [AsyncFunction: yaml],
      removeExtension: true,
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      key: ".yml",
      pageLoader: [AsyncFunction: yaml],
      removeExtension: true,
    },
  ],
}
`;

snapshot[`Build a markdown site 3`] = `
[
]
`;

snapshot[`Build a markdown site 4`] = `
{
  content: "<h1>Normal page</h1>
<ul>
<li>List</li>
<li>Of</li>
<li>Elements</li>
</ul>
",
  data: {
    content: "
# Normal page

- List
- Of
- Elements
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Basic page",
    url: "/basic/",
  },
  dest: {
    ext: ".html",
    path: "/basic/index",
  },
  src: {
    ext: ".md",
    path: "/basic",
  },
}
`;

snapshot[`Build a markdown site 5`] = `
{
  content: '<p><a href="#foo" target="_blank">link</a></p>
',
  data: {
    content: "[link](#foo){target=_blank}
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/with-attributes/",
  },
  dest: {
    ext: ".html",
    path: "/with-attributes/index",
  },
  src: {
    ext: ".md",
    path: "/with-attributes",
  },
}
`;

snapshot[`Build a markdown site 6`] = `
{
  content: '<pre><code class="language-html">&lt;p&gt;Example&lt;/p&gt;
</code></pre>
<pre><code>&lt;p&gt;Example without color highlight&lt;/p&gt;
</code></pre>
',
  data: {
    content: "\`\`\`html
<p>Example</p>
\`\`\`

\`\`\`
<p>Example without color highlight</p>
\`\`\`
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/with-code/",
  },
  dest: {
    ext: ".html",
    path: "/with-code/index",
  },
  src: {
    ext: ".md",
    path: "/with-code",
  },
}
`;

snapshot[`Build a markdown site 7`] = `
{
  content: "<!-- deno-fmt-ignore-file -->
<dl>
<dt>This is a definition title</dt>
<dd>And this the description</dd>
<dd>Other description</dd>
<dt>Other title</dt>
<dd>And other description</dd>
</dl>
",
  data: {
    content: "<!-- deno-fmt-ignore-file -->
This is a definition title
: And this the description
: Other description

Other title
: And other description
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/with-deflist/",
  },
  dest: {
    ext: ".html",
    path: "/with-deflist/index",
  },
  src: {
    ext: ".md",
    path: "/with-deflist",
  },
}
`;

snapshot[`Build a markdown site 8`] = `
{
  content: '
<h1>Module <strong>example</strong></h1>

<div><p>Welcome to this <a href="/">page</a></p></div>
',
  data: {
    content: "
<h1>{{ title | md(true) | safe }}</h1>

<div>{{ description | md | safe }}</div>
",
    date: 1970-01-01T00:00:00.000Z,
    description: "Welcome to this [page](/)
",
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Module **example**",
    url: "/with-filter/",
  },
  dest: {
    ext: ".html",
    path: "/with-filter/index",
  },
  src: {
    ext: ".njk",
    path: "/with-filter",
  },
}
`;

snapshot[`Build a markdown site 9`] = `
{
  content: '<h1>Module example</h1>
<p><a href="/">Back to home</a></p>
',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    templateEngine: "tmpl.js,md",
    title: "Module example",
    url: "/with-module/",
  },
  dest: {
    ext: ".html",
    path: "/with-module/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/with-module",
  },
}
`;

snapshot[`Build a markdown site 10`] = `
{
  content: '<!-- deno-fmt-ignore-file -->
<h1></h1>
<p>Foo</p>
<ul>
<li>one: <a href="/items/un.html">un</a></li>
<li>two: <a href="/items/dous.html">dous</a></li>
<li>three: <a href="/items/tres.html">tres</a></li>
</ul>
',
  data: {
    content: "<!-- deno-fmt-ignore-file -->
# {{ title }}

Foo

{% for title, no in myData %}
- {{ title }}: [{{ no }}](/items/{{ no }}.html)
{%- endfor %}
",
    date: 1970-01-01T00:00:00.000Z,
    myData: {
      one: "un",
      three: "tres",
      two: "dous",
    },
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    templateEngine: "njk,md",
    url: "/with-nunjucks/",
  },
  dest: {
    ext: ".html",
    path: "/with-nunjucks/index",
  },
  src: {
    ext: ".md",
    path: "/with-nunjucks",
  },
}
`;
